--- a/src/template.html
+++ b/src/template.html
@@ -111,6 +111,49 @@
           <h2 class="section-title dark-blue-text">Projects</h2>
 
           <!-- Each .row is a project -->
+
+
+          div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">  Slack Clone in React </h3>
+                <div>
+                  <p class="mb-4">
+                    A Slack clone made in react . Used redux , firebase hooks, react-router,  styled components , Material-UI . Also, added in authentication and sign in and sign out option. 
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://slack-clone-a59d0.web.app/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Muneeb2017/slack-clone"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded js-tilt">
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/slack2.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
