--- a/src/template.html
+++ b/src/template.html
@@ -147,7 +147,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/slack2.png"
+                      src="assets/slack2.jpg"
                     />
                   </div>
                 </a>
