--- a/src/template.html
+++ b/src/template.html
@@ -113,7 +113,7 @@
           <!-- Each .row is a project -->
 
 
-          div class="row">
+          <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">  Slack Clone in React </h3>
